# chatgpt-automation-mcp

./: .env.example  .gitignore  CDP_SETUP.md  CLAUDE.md  LICENSE  README.md  TESTING.md  optimize_delays.py  pyproject.toml  run_tests.py
docs/: CHROME_PROFILE_MANAGEMENT.md  DEVELOPMENT_BEST_PRACTICES.md  DOM_WAITING_PATTERNS.md  FEATURE_FIX_RESULTS.md  FEATURE_TEST_STATUS.md  MORE_MODELS_IMPLEMENTATION.md  TDD_TEST_PLAN.md  TECHNICAL.md  TEST_EXECUTION_TIMES.md  TIMEOUT_AND_DELAY_GUIDELINES.md  TIMEOUT_IMPROVEMENTS_SUMMARY.md
src/chatgpt_automation_mcp/: __init__.py  animation_config.py  browser_controller.py  config.py  error_recovery.py  quota_tracker.py  server.py  timeout_helper.py
tests/: __init__.py  conftest.py  debug_menus.py  debug_tools_menu.py  test_all_features.py  test_auto_enable_search.py  test_browser_controller.py  test_chrome_launch.py  test_deep_research_discovery.py  test_deep_research_verification.py  test_editing_features.py  test_error_recovery.py  test_feature_fixes.py  test_feature_location_fix.py  test_feature_summary.md  test_functional.py  test_integration.py  test_mcp_server.py  test_minimal.py  test_model_selection.py  test_model_selection_logic.py  test_more_models_submenu.py  test_server_auto_enable.py  test_think_longer_verification.py  test_thinking_models.py  test_tools_features.py  test_ui_automation.py  test_ui_discovery.py  test_ui_fixes.py  test_web_search_verification.py
tests/test_data/: ui_map.json
