[project]
name = "chatgpt-automation-mcp"
version = "0.1.0"
description = "MCP server for automating ChatGPT web interface via Playwright"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "mcp>=0.1.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long - we set to 100

[project.scripts]
chatgpt-mcp = "chatgpt_automation_mcp.server:main"
test-browser = "chatgpt_automation_mcp.browser_controller:test_browser_controller"